<resources>
    <string name="app_name">SiagaBanjir</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="selamat">Selamat Datang</string>
    <string name="nama">Lorem Ipsum Dolor</string>
    <string name="Cuaca">Cerah Berawan 30</string>
    <string name="bandung">Bandung</string>
    <string name="sudah_ada_akun">Sudah ada akun? </string>
    <string name="login_disini">Masuk disini</string>
    <string name="belum_ada_akun">Belum punya akun ?</string>
    <string name="doRegistrasi">Buat akun</string>
    <string name="login_button">Masuk</string>
    <string name="register_button">buat akun</string>
    <string name="siaga_banjir">SIAGA BANJIR</string>
    <string name="pengaturan_akun"> Pengaturan Akun</string>
    <string name="pengaturan_password"> Pengaturan Password</string>
    <string name="do_update">Update informasi akun anda ?</string>
    <string name="do_update_password">Update password anda ?</string>
    <string name="selamat_datang">Selamat datang</string>
    <string name="name">Lorem Ipsum Dolor</string>
    <string name="atmosfer">Cerah Berawan</string>
    <string name="suhu">30°</string>
    <string name="button_upload_image">Upload bukti</string>
    <string name="hint_area">Pilih area</string>
    <string name="hint_description">Masukkan deskripsi</string>
    <string name="lapor_banjir">LAPORKAN BANJIR</string>
    <string name="ket_report">Laporkan banjir ini khusus untuk wilayah RW. 10 Desa Buahbatu, Kecamatan Bojongsoang, Kabupaten Bandung, Jawa Barat.</string>
    <string name="ket2_lapor">Bantu kami laporkan informasi banjir wilayah RW. 10</string>
    <string name="Submit_report">Submit Laporan</string>
    <string name="greeting">Selamat datang</string>
    <string name="dump_name">Memuat data....</string>
    <string name="income_banjir">Memuat data....</string>
    <string name="info_banjir">Informasi wilayah banjir saat ini</string>
    <string name="menu_lain">Menu lainya</string>
    <string name="report">laporkan banjir</string>
    <string name="notif_title">Waspada Banjir</string>
    <string name="notif_message">Waspada air mulai menaik!</string>
    <string name="notif_channel_id" translatable="false">reminder</string>
    <string name="notif_channel_name">Reminder</string>
    <string name="notif_channel_desc">Reminder check-in tiap beberapa jam.</string>


</resources>